vlib/v/checker/tests/mut_interface_param_err.out
vlib/v/checker/tests/mut_interface_param_err.vv:19:10: error: method `add` parameter `widget` is `mut`, so use `mut btn` instead
   17 |     mut win := Window{}
   18 |     mut btn := Button{}
   19 |     win.add(btn)  // should be an error here
      |             ~~~
   20 | }
